--- a/paginanirvana/site-acessivel-projeto-inicial/index.html
+++ b/paginanirvana/site-acessivel-projeto-inicial/index.html
@@ -31,9 +31,9 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/nirvana transparente.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
-                        height="278" loading="lazy">
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao</h1>
+                    <img src="img/nirvana transparente.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="300"
+                        height="180" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
@@ -46,11 +46,7 @@
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <p class="p-2">O Nirvana foi uma das bandas mais icônicas do movimento grunge e da história do rock. Formada em 1987 em Aberdeen, Washington, pelo cantor e guitarrista Kurt Cobain, o baixista Krist Novoselic e o baterista Dave Grohl, a banda rapidamente se tornou uma das principais responsáveis pela popularização do grunge, um subgênero do rock alternativo que mistura elementos de punk e heavy metal, com letras introspectivas e uma sonoridade crua.</p>
                 </div>
             </div>
         </section>
