--- a/paginanirvana/site-acessivel-projeto-inicial/index.html
+++ b/paginanirvana/site-acessivel-projeto-inicial/index.html
@@ -31,7 +31,7 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao </h1>
                     <img src="img/nirvana transparente.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="300"
                         height="180" loading="lazy">
                     <a href="#tropicalia"
@@ -45,7 +45,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
+                    <h2>O que foi o nirvana?</h2>
                     <p class="p-2">O Nirvana foi uma das bandas mais icônicas do movimento grunge e da história do rock. Formada em 1987 em Aberdeen, Washington, pelo cantor e guitarrista Kurt Cobain, o baixista Krist Novoselic e o baterista Dave Grohl, a banda rapidamente se tornou uma das principais responsáveis pela popularização do grunge, um subgênero do rock alternativo que mistura elementos de punk e heavy metal, com letras introspectivas e uma sonoridade crua.</p>
                 </div>
             </div>
@@ -57,11 +57,11 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                        <img src="img/IMG_20250311_223555.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/IMG_20250311_223544.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
