--- a/paginanirvana/site-acessivel-projeto-inicial/index.html
+++ b/paginanirvana/site-acessivel-projeto-inicial/index.html
@@ -15,12 +15,20 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/Design sem nome.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
+            <img src="img/Design sem nome.png" alt="Logotipo nirvana" title=" logotipo nirvana - cco = dominio público - painterest" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
+            </ul>
+            
+            <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+                <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+
+
+
+            </div>
         </nav>
        
     </header>
@@ -32,12 +40,13 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao </h1>
-                    <img src="img/nirvana transparente.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="300"
+                    <img src="img/nirvana transparente.png" alt="A logo clássica do nirvana desenhada pelo kurt Cobain" title="smile face nirvana = cco = dominio público - painterest " class="mb-3" width="300"
                         height="180" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
+                <img class="anjo" src="img/1741743489989.png" alt="anjo do nirvana, usada no albún in utero" title="anjo - cco = dominio público - painterest">
 
             </div>
         </section>
@@ -46,7 +55,7 @@
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>O que foi o nirvana?</h2>
-                    <p class="p-2">O Nirvana foi uma das bandas mais icônicas do movimento grunge e da história do rock. Formada em 1987 em Aberdeen, Washington, pelo cantor e guitarrista Kurt Cobain, o baixista Krist Novoselic e o baterista Dave Grohl, a banda rapidamente se tornou uma das principais responsáveis pela popularização do grunge, um subgênero do rock alternativo que mistura elementos de punk e heavy metal, com letras introspectivas e uma sonoridade crua.</p>
+                    <p class="p-1">O Nirvana foi uma das bandas mais icônicas do movimento grunge e da história do rock. Formada em 1987 em Aberdeen, Washington, pelo cantor e guitarrista Kurt Cobain, o baixista Krist Novoselic e o baterista Dave Grohl, a banda rapidamente se tornou uma das principais responsáveis pela popularização do grunge, um subgênero do rock alternativo que mistura elementos de punk e heavy metal, com letras introspectivas e uma sonoridade crua. fonte : Wikipedia (melhor fonte)</p>
                 </div>
             </div>
         </section>
@@ -57,11 +66,12 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/IMG_20250311_223555.jpg"
+                        <img src="img/IMG_20250311_223555.jpg" alt="Anjo do nirvana, usada no albún in utero" title="anjo - cco = dominio público - painterest"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/IMG_20250311_223544.jpg" class="img-fluid rounded-5"
+                        <img src="img/IMG_20250311_223544.jpg" alt="Anjo do nirvana, usada no albún in utero" title="anjo - cco = dominio público - painterest"
+                        class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
