--- a/paginanirvana/site-acessivel-projeto-inicial/index.html
+++ b/paginanirvana/site-acessivel-projeto-inicial/index.html
@@ -23,6 +23,8 @@
             </ul>
             
             <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade" class="btn-primary rotacao-botao fw-bold">Acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista"></div>
                 <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
                 <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
 
